# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

module_output_path = "multimedia_image/image_framework"

ohos_unittest("commontest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_map_parcel_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_map_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
  ]

  # external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
}

ohos_unittest("imagepixelmaptest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
  ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_packer_ex_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_pixel_map_switch_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_pixel_map_test.cpp",
  ]

  deps = [
    #    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native:bitmapconverter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]

  # external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

ohos_unittest("imagepixelmapparceltest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/multimedia/image_framework/mock/native/include",
    "//foundation/multimedia/image_framework/mock/native/include/hilog",
  ]
  sources = [ "./unittest/image_pixel_map_parcel_test.cpp" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",

    #    "//foundation/multimedia/image_framework/mock/native:utils_mock_static",
    #    "//foundation/multimedia/image_framework/mock/native:log_mock_static",
  ]

  if (use_clang_android || use_clang_ios) {
    deps -= [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]
  }
  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",

    #"//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
  ]
}

ohos_unittest("imagesourcetest") {
  DUAL_ADAPTER = true
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [
    # "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_packer_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_gif_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_jpeg_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_png_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_util.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_webp_test.cpp",
  ]
  if (DUAL_ADAPTER) {
    sources += [
      "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_bmp_test.cpp",
      # "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_raw_test.cpp",
      # "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_wbmp_test.cpp",
    ]
  }

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (use_clang_android || use_clang_ios) {
    deps -= [ "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog" ]
  }

  external_deps = [ "c_utils:utils" ]

  # external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
}

ohos_unittest("format_agent_plugin_src_test") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//commonlibrary/c_utils/base/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/format_agent_plugin_src_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
}

ohos_unittest("imageutilstest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/media_utils_lite/interfaces/kits",
    "//foundation/communication/ipc/utils/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_utils_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
  ]

  external_deps = [
    "c_utils:utils",

    #"hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
}

ohos_unittest("colorconvertertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/color_converter_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]

  #  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}

ohos_unittest("transformtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
  ]
  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_transform_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (use_clang_android || use_clang_ios) {
    include_dirs -=
        [ "//base/hiviewdfx/hilog/interfaces/native/innerkits/include" ]
  }

  external_deps = [ "c_utils:utils" ]

  #  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
ohos_unittest("imagecolorspacetest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  cflags = [ "-DIMAGE_DEBUG_FLAG" ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_color_space_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_source_util.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  if (use_clang_android || use_clang_ios) {
    deps -= [
      "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
      "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    ]
  }

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("formatagentplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/format_agent_plugin_test.cpp" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("attrdatatest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/attr_data_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("convertertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/matrix_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_convert_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_map_rosen_utils_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/post_proc_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/scan_line_filter_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("gstpluginfwtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/src/thirdpartyadp/gstreamer",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/gst_plugin_fw_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pixelconvertadaptertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/pixel_convert_adapter_test.cpp" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pluginsmanagersrcframeworktest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/manager/include/utils",
    "//foundation/multimedia/image_framework/plugins/manager/src/common",
    "//foundation/multimedia/image_framework/plugins/manager/src/framework",
    "//foundation/multimedia/image_framework/plugins/manager/src/pluginbase",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/src/framework",
    "//third_party/googletest/googletest/include",
    "//third_party/json/single_include/nlohmann",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugins_manager_src_framework_test.cpp" ]

  deps = [
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("receivertest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_receiver_manager_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_receiver_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("mocktest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/mock/native/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_directory_ex_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_hitrace_meter_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_parcel_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_refbase_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_rwlock_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/mock_string_ex_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/mock/native:utils_mock_static",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("plugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//third_party/libpng",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libpngplugin/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/nine_path_listener_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/png_decoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/png_ninepatch_res_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libpngplugin:pngplugin",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libpng:png_static",
  ]

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("streamtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/buffer_packer_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/buffer_source_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/file_source_stream_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/incremental_source_stream_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/formatagentplugin:imageformatagent",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("interfacetest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/common/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/converter/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/interface_test.cpp" ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("creatortest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/creator/include",
  ]

  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_creator_manager_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/image_creator_test.cpp",
  ]

  deps = [
    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils:image_utils",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libpng:png_static",
  ]

  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("webpplugintest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter/include",
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/utils/include",
    "//third_party/googletest/googletest/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/stream/include",
    "//foundation/multimedia/image_framework/adapter/frameworks/bitmapconverter/native/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include",
    "//third_party/flutter/skia/third_party/externals/libwebp/src",
  ]
  sources = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugin_server_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_decoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_encoder_test.cpp",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/webp_plugin_export_test.cpp",
  ]

  deps = [
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/pixelconverter:pixelconvertadapter",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libwebpplugin:webpplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]
}

ohos_unittest("pluginlibjpegtest") {
  module_out_path = module_output_path

  include_dirs = [
    "//foundation/multimedia/utils/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/plugins/manager/include",
    "//foundation/multimedia/image_framework/plugins/manager/include/image",
    "//foundation/multimedia/image_framework/plugins/manager/include/pluginbase",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
    "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/utils/include",
    "//foundation/graphic/graphic_2d/utils/color_manager/export",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/include/codec",
    "//third_party/flutter/skia",
    "//third_party/flutter/skia/include/core",
    "//third_party/flutter/skia/third_party/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/externals/libjpeg-turbo",
    "//third_party/flutter/skia/third_party/skcms",
    "//third_party/libexif",
  ]

  sources = [ "//foundation/multimedia/image_framework/frameworks/innerkitsimpl/test/unittest/plugin_libjpeg_test.cpp" ]

  deps = [
    "//foundation/graphic/graphic_2d/utils/color_manager:color_manager",
    "//foundation/multimedia/image_framework/interfaces/innerkits:image_native",
    "//foundation/multimedia/image_framework/plugins/common/libs/image/libjpegplugin:jpegplugin",
    "//foundation/multimedia/image_framework/plugins/manager:pluginmanager_static",
    "//third_party/flutter/build/libjpeg:ace_libjpeg",
    "//third_party/flutter/build/skia:ace_skcms",
    "//third_party/flutter/build/skia:ace_skia_ohos",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/libexif:libexif",
  ]
  resource_config_file = "//foundation/multimedia/image_framework/test/resource/image/ohos_test.xml"
  external_deps = [
    "c_utils:utils",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

################################################
group("unittest") {
  testonly = true
  deps = [
    ":attrdatatest",
    ":colorconvertertest",
    ":convertertest",
    ":creatortest",
    ":format_agent_plugin_src_test",
    ":formatagentplugintest",
    ":gstpluginfwtest",
    ":imagecolorspacetest",
    ":imagepixelmapparceltest",
    ":imagepixelmaptest",
    ":imagesourcetest",
    ":imageutilstest",
    ":interfacetest",
    ":mocktest",
    ":pixelconvertadaptertest",
    ":pluginlibjpegtest",
    ":pluginsmanagersrcframeworktest",
    ":plugintest",
    ":receivertest",
    ":streamtest",
    ":transformtest",
    ":webpplugintest",
  ]
}
################################################
